# sensors_reader

./: .gitignore  Dockerfile  Readme.md  compose.yaml  main.py  pyproject.toml  sample_script.py
data/: main_device_code.ino  readme.md  relay_device.ino  sensors.txt
sketches/: readme.md
src/: connector.py  main.py  models.py  queries.py  queries.txt  readme1.md  sample_script.py  services.py
